Generate Maven repo zip per member